<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

        <item
            android:id="@+id/Item_standard"
            android:title="@string/app_standard"
            />
        <item
            android:id="@+id/Item_scientifique"
            android:title="@string/app_scientifique"

            />
        <item
            android:id="@+id/Item_langue"
           android:icon="@drawable/ic_baseline_language_24"
            android:title="@string/langue_choice"
            app:showAsAction="withText">

                <menu>
                        <item
                            android:id="@+id/Item_English"
                            android:title="@string/app_en"
                            />
                        <item
                            android:id="@+id/Item_Frensh"
                            android:title="@string/app_fr"
                            />
                        <item
                            android:id="@+id/Item_German"
                            android:title="@string/app_de"
                            />
                </menu>
        </item>











</menu>