<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="1dp">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonErrase"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:textSize="24sp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/cercleoperator"
                android:onClick="ereaseBTN"
                android:text="@string/erase"
                android:textColor="#EB5906"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonPower"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/cercleoperator"
                android:onClick="powerBTN"
                android:text="@string/power"
                android:textColor="?attr/textOperator_color"
                android:textSize="24sp" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonRacine"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/cercleoperator"
                android:onClick="racineBTN"
                android:text="@string/racine"
                android:textColor="?attr/textOperator_color"
                android:textSize="24sp" />
            <ImageButton
                android:id="@+id/butt"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/cercleoperator"
                android:contentDescription="@string/erase"
                android:onClick="clearBTN"
                android:src="@drawable/ic_baseline_backspace_24"
                app:layout_constraintBottom_toTopOf="@+id/tableLayout"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonParenthesis"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/cercleoperator"
                android:onClick="paranBTN"
                android:text="@string/parenthesis"
                android:textColor="?attr/textOperator_color"
                android:textSize="24sp" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonModulo"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/cercleoperator"
                android:onClick="moduloBTN"
                android:text="@string/modulo"
                android:textColor="?attr/textOperator_color"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/tableLayout"
                app:layout_constraintEnd_toEndOf="parent" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAdd"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/cercleoperator"
                android:onClick="addBTN"
                android:text="@string/plus"
                android:textColor="?attr/textOperator_color"
                android:textSize="24sp" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonMultip"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/cercleoperator"
                android:onClick="multBTN"
                android:text="@string/multiplication"
                android:textColor="?attr/textOperator_color"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button7"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/cercle"
                android:onClick="sevenBTN"
                android:text="@string/seven"
                android:textSize="24sp"
                android:textColor="?attr/textNumber_color"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button8"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/cercle"
                android:onClick="eightBTN"
                android:text="@string/eight"
                android:textSize="24sp"
                android:textColor="?attr/textNumber_color"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button9"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/cercle"
                android:onClick="nineBTN"
                android:text="@string/nine"
                android:textSize="24sp" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonSub"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/cercleoperator"
                android:onClick="subBTN"
                android:text="@string/moin"
                android:textColor="?attr/textOperator_color"
                android:textSize="24sp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button4"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/cercle"
                android:onClick="fourBTN"
                android:text="@string/four"
                android:textSize="24sp"
                android:textColor="?attr/textNumber_color"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button5"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/cercle"
                android:onClick="fiveBTN"
                android:text="@string/five"
                android:textSize="24sp"
                android:textColor="?attr/textNumber_color"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button6"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/cercle"
                android:onClick="sixBTN"
                android:text="@string/six"
                android:textSize="24sp"
                android:textColor="?attr/textNumber_color"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonDivision"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/cercleoperator"
                android:onClick="divBTN"
                android:text="@string/division"
                android:textColor="?attr/textOperator_color"
                android:textSize="24sp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/cercle"
                android:onClick="oneBTN"
                android:text="@string/one"
                android:textSize="24sp"
                android:textColor="?attr/textNumber_color"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/cercle"
                android:onClick="twoBTN"
                android:text="@string/two"
                android:textSize="24sp"
                android:textColor="?attr/textNumber_color"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/cercle"
                android:onClick="threeBTN"
                android:text="@string/three"
                android:textSize="24sp"
                android:textColor="?attr/textNumber_color"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonPlusM"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:textColor="?attr/textOperator_color"
                android:textSize="24sp"
                android:background="@drawable/cercleoperator"
                android:onClick="signeBTN"
                android:text="@string/plusMoins"
                 />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonZero"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/cercle"
                android:onClick="zeroBTN"
                android:text="@string/zero"
                android:textSize="24sp"
                android:textColor="?attr/textNumber_color"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonPoint"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/cercle"
                android:onClick="pointBTN"
                android:text="@string/point"
                android:textSize="24sp"
                android:textColor="?attr/textNumber_color"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonEqual"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="2"

                android:background="@drawable/scientifique"
                android:onClick="equalBTN"
                android:text="@string/equal"

                android:textColor="@color/white"
                android:textSize="24sp" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="163dp"
        android:background="?attr/backgroundNumbers_color"
        android:padding="12dp"
        android:text="@string/display"
        android:textAlignment="textEnd"
        android:textColor="?attr/textNumber_color"
        android:textSize="40dp"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="-11dp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="12dp"
        android:text="0"
        android:textAlignment="textEnd"
        android:textSize="50dp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        tools:layout_editor_absoluteX="0dp"
        android:background="?attr/backgroundNumbers_color"/>


</androidx.constraintlayout.widget.ConstraintLayout>